# openactuarial

./: CHANGELOG.md  README.md  pyproject.toml
src/openactuarial/: __init__.py
tests/: test_ecosystem_imports.py
