[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openactuarial"
version = "0.2.1"
description = "Meta-package installing the full OpenActuarial ecosystem."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Michael Bryant"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Financial and Insurance Industry",
]
dependencies = [
    "actuarialpy>=0.45",
    "experiencestudies>=0.4",
    "projectionmodels>=0.7",
    "ratingmodels>=0.8",
    "lossmodels>=0.7.2",
    "extremeloss>=0.6.3",
    "risksim>=0.5.1",
]

[project.urls]
Homepage = "https://openactuarial.org"
Documentation = "https://openactuarial.org"
Repository = "https://github.com/OpenActuarial/openactuarial"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["openactuarial"]
