[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openactuarial"
version = "0.4.0"
description = "Meta-package installing the full OpenActuarial ecosystem."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Michael Bryant"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Financial and Insurance Industry",
]
# Exact pins, deliberately: this meta-package installs the one combination
# of ecosystem releases that was tested together. Pre-1.0 minor releases may
# break APIs, so open ranges here would let pip assemble an untested (or
# incompatible) set. Install individual packages directly if you want looser
# ranges. Each openactuarial release bumps these pins to the next tested train.
dependencies = [
    "actuarialpy==0.46.3",
    "experiencestudies==0.5.2",
    "projectionmodels==0.8.2",
    "ratingmodels==0.9.2",
    "reservingmodels==0.1.0",
    "lossmodels==0.8.2",
    "extremeloss==0.7.2",
    "risksim==0.5.5",
]

[project.urls]
Homepage = "https://openactuarial.org"
Documentation = "https://openactuarial.org"
Repository = "https://github.com/OpenActuarial/openactuarial"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["openactuarial"]
